26 January 2005 Sylvain Pion
- Lazy_exact_nt<ET> : allow ET == int and ET == double.
- Lazy_exact_nt<ET> : add % and gcd (kills filtering, though).

12 January 2005 Sylvain Pion
- Static filters : small correction of epsilons.

11 January 2005 Sylvain Pion
- Improve static filters : protect against overflow.

06 January 2005 Sylvain Pion
- Fix warning with VC++.

------------------------------ CGAL 3.1 ------------------------------

25 November 2004 Sylvain Pion
- x86_64 porting.

18 November 2004 Sylvain Pion
- Static filters : protect against underflow.
- Static filters : improve fit_in_double() interface.

4 November 2004 Sylvain Pion
- Static filters : yet another smallish re-optimisticization.

2 November 2004 Sylvain Pion
- Static filters : yet another smallish de-optimisticization.

29 October 2004 Sylvain Pion
- Static filters : the epsilons were a bit too optimistic for the
  homogeneization formal proof.

28 October 2004 Sylvain Pion
- Static filters : the epsilons were a bit too pessimistic.

29 September 2004 Sylvain Pion
- Remove obsolete tst_static_adaptatif.C.
- Make Static_filter_error::ulp() work with optimization.
- The ulp computation was too optimistic for Intel's "extended precision
  feature", so adjust the epsilons.
- Add safe default "true" for template argument of Protect_FPU_rounding.

24 September 2004 Sylvain Pion
- Interval_nt : Introduce comparison functions/operators in namespace
  CGAL::Certified which do not throw but return the guarantee-ness as a bool.
- Lazy_exact_nt : use the above new functions to replace exceptions.

20 September 2004 Sylvain Pion
- Add Exact_type_selecter<> to select the exact number type to be used in
  Filtered_kernel.

20 September 2004 Sylvain Pion
- Add fit_in_double() for Lazy_exact_nt.

14 September 2004 Sylvain Pion
- Filtered_kernel : cleanup.

13 September 2004 Sylvain Pion
- Filtered_kernel : use converters C2E/C2F from the final kernel objects, and not
  its Kernel_base.
